﻿================================================================================
		Starbound Mass Effect Edition (SMEE) 
================================================================================
		by Team SMEE
		
		Mod Version: 0.2.3
		Starbound Version: Beta v. Enraged Koala
		Release Date: 2014-02-23
		
--------------------------------------------------------------------------------
http://community.playstarbound.com/index.php?resources/starbound-mass-effect-edition.1062/
--------------------------------------------------------------------------------

================================================================================
	Changelog
================================================================================


Version - 0.2.3:
--------------------------------------------------------------------------------
- Enraged Koala fixes.


Version - 0.2.3:
--------------------------------------------------------------------------------
- Added optional species pack for vanilla humans 
  (now also vanilla humans can fly the normandy)
- Updates for Starbound Beta v. Enraged Koala



Version - 0.2.2:
--------------------------------------------------------------------------------
- Compatibility patch for Industrialization: Starbound Edition (needs patch pack SMEEISE)
- Music moved to extra pack.


Version - 0.2.1:
--------------------------------------------------------------------------------
- Hotfix: Missing iridiumbar and palladiumbar recipes added to the player.config
- Added custom filter button for Tabularasa 2.0


Version - 0.2.0:
--------------------------------------------------------------------------------
- Fixed Omni-Tools: altBlockRadius back to 1. Added tiered recipe materials.
- Normandy Changes: 
	- Fixed "infamous" toilet stuck bug (corner removed)
	- Fixed stuck if using the galaxy map
	- Added new room.
	- Moved "vanilla" fuel hatch into cockpit.
	- Improved galaxy console
	- New furniture
- Added recipes for Alliance Wall Panels