@@ -26,3 +26,4 @@ You need also to download the SMEE core files.
 G4M5T3R - Mad Scientist (races and armors)
 Pfhoenix - Biotic God (biotic and tech powers)
 TohKlidan - Expert Tinkerer (ships and crafting)
+Kinsem - Insane Pixelist (art awesomeness)
