@@ -29,3 +29,4 @@ Nothing inside here runs without both mods!
 G4M5T3R - Mad Scientist (races and armors)
 Pfhoenix - Biotic God (biotic and tech powers)
 TohKlidan - Expert Tinkerer (ships and crafting)
+Kinsem - Insane Pixelist (art awesomeness)
