@@ -1,8 +1,9 @@
 - More Enraged Koala fixes.
 - Wireless Sound System (WSS) for ship wide sounds, currently used by radio and galaxy console.
-- New re-shaded Normandy. Thanks to Starbound forum member Kinsem!
+- New re-shaded Normandy.
 - Medbay Bed is now responsive and shows current health
 - 2 new codex quests.
 - New loading Mass Relay.
 - Tier 1 helms air tank removed
 - Turian now have a mouth for "idle".
+- Optional species package for custom species Avali
